Refactor: Move BOOT_COMPLETED action handling to BootAndTimeZoneReceiver, separate from AlarmReceiver